--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,140 @@
-.App {
-  text-align: center;
+body{
+    box-sizing: border-box;
+    background-color: #C70119;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.title{
+    color: yellow;
+    text-shadow: 2px 0px blue, -2px 0px blue, 0px 2px blue, 0px -2px blue;
+    font-size: 25px;
+    position: relative;
+    top: 20px;
+    left: 130px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.searchPoke{
+    position: relative;
+    top: 20px;
+    right: 85px;
 }
 
-.App-link {
-  color: #61dafb;
+.pokeButton{
+    position: relative;
+    top: 19px;
+    right: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokeStats{
+    font-size: 18px;
+    background-color: grey;
+    font-family: Arial;
+    position: relative;
+    top: 180px;
+    left: 20px;
+    color: white;
+}
+.pokeStats:nth-of-type(odd){
+    border: 2px solid blue;
+}
+
+.pokeStats:nth-of-type(even){
+    border-right: 2px solid blue;
+    border-left: 2px solid blue;
+}
+
+.pokeStats:nth-last-child(1){
+    border-bottom: 2px solid blue;
+}
+
+.pokeGif{
+    border: 2px solid blue;
+    background-color: grey;
+    position: relative;
+    top: 40px;
+    overflow: hidden;
+    padding: 0;
+    height: 500px;
+}
+
+.pokeImage{
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    display: table-cell;
+    vertical-align: middle;
+    width: auto;
+    height: 400px;
+    /* top: 25%;
+    left: 25%; */
+    /* line-height: 15%; */
+}
+
+
+@media (max-width: 1100px){
+.title{
+    position: relative;
+    left: 130
+}
+
+.searchPoke{
+    position: relative;
+    top: 60px;
+    right: 140px;
+}
+
+.pokeButton{
+    position: relative;
+    top: 80px;
+    right: 90px;
+
+}
+
+.pokeGif{
+    position: relative;
+    top: 140px;
+}
+
+.pokeImage{
+    width: 435px;
+}
+
+.pokeStats{
+    position: relative;
+    top: 270px;
+}
+}
+
+@media (max-width: 500px){
+.title{
+    position: relative;
+    left: 40px
+}
+
+.searchPoke{
+    position: relative;
+    top: 60px;
+    right: 95px;
+}
+
+.pokeButton{
+    position: relative;
+    top: 80px;
+    right: 50px;
+
+}
+
+.pokeGif{
+    position: relative;
+    top: 140px;
+    left: 13px;
+}
+
+.pokeImage{
+    width: 280px;
+}
+
+.pokeStats{
+    position: relative;
+    top: 200px;
+}
 }
