--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,11 @@ body{
 }
 
 
+
+
+
+/*Media in case Materalize does not work out and I need to refine*/
+/* 
 @media (max-width: 1100px){
 .title{
     position: relative;
@@ -137,4 +142,4 @@ body{
     position: relative;
     top: 200px;
 }
-}
+} */
