--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,30 @@ body{
     font-size: 35px;
     position: relative;
     left: 130px;
+    top: 5px;
+    display: inline-block;
 }
 
 .searchPoke{
     position: relative;
-    top: 20px;
-    right: 20px;
-    background-color: white;
-    color: white;
+    top: 13px;
+    right: 5%;
+    background: white !important;
+    width: 250px !important;
+    display: inline-block
+}
+
+.input-field{
+    display: inline-block
 }
 
 .pokeButton{
+    align-items: center;
     position: relative;
-    top: 25px;
-    right: 90px;
+    display: inline-block;
+    width: 125px;
+    margin-left: 1%;
+    top: 31px;
 }
 
 .pokeStats{
@@ -55,14 +65,15 @@ body{
     overflow: hidden;
     padding: 0;
     height: 475px;
-    display: block;
+    display: inline-block;
 }
 
 .pokeImage{
-    position: absolute;
+    position: relative;
+    margin: auto;
     top: 35px;
-    left: 32px;
-    display: table-cell;
+    left: 26px;
+    display: inline-block;
     vertical-align: middle;
     width: 90%;
     height: 85%;
@@ -76,8 +87,101 @@ body{
     text-shadow: 2px 0px blue, -2px 0px blue, 0px 2px blue, 0px -2px blue;
 }
 
+.search{
+    width: 100%;
+    height: 100%;
+}
 
+@media (max-width: 950px){
+    .title{
+        left: 15% !important;
+    }
+    .searchPoke{
+        left: 90%;
+    }
+    .pokeButton{
+        left: 25%
+    }
+    .pokeGif{
+        left: 15%
+    }
+    .pokeStats{
+        left: 35%;
+    }
+}
+@media (max-width: 786px){
+    .title{
+        right: 100px
+    }
+    .searchPoke{
+        top: 10px;
+        left: 120px
+    }
 
+    .pokeGif{
+        left: 10%
+    }
+
+    .pokeButton{
+        top: 28px;
+        left: 150px
+    }
+
+    .pokeGif{
+        top: 50px;
+        width: 95%;
+    }
+    .statistics{
+        width: 100%;
+        left: 3%
+    }
+    .pokeStats{
+        width: 85%;
+        left: 95px
+    }
+}
+
+@media (max-width: 425px){
+    .title{
+        font-size: 55px;
+        left: 20% !important;
+    }
+    .searchPoke{
+        width: 200px !important;
+        left: 30px
+    }
+    .pokeButton{
+        top: 31px;
+        left: 10%
+    }
+    .pokeGif{
+        left: 15px
+    }
+    .pokeStats{
+        left: 25px
+    }
+}
+
+@media (max-width: 375px){
+    .title{
+        font-size: 60px;
+        left: 15%
+    }
+    .searchPoke{
+        top: 20%;
+        left: 3%
+    }
+    .pokeButton{
+        left: 15px !important;
+        top: 17px !important;
+    }
+    .pokeGif{
+        top: 25%
+    }
+    .pokeStats{
+        top: 20px
+    }
+}
 
 /*Media in case Materalize does not work out and I need to refine*/
 /* 
